--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ----------- CONFIGURABLE START -----------
 title:            "blog"
-description:      ""
-url:              http://rumia.club # Site url, without a slash at the end.
+description:      "???"
+url:              //rumia.club # Site url, without a slash at the end.
 signoff:          "rumia" # Your name
 facebook_appid:   # APP ID for like button, remove from /_includes/share.html if unwanted.
 google_analytics: # Set tracking, remove from /javascripts/basic.js if unwanted.
