--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,9 @@ links:
   - name:         About me
     url:          /about
     external:     false
+  - name:         rss
+    url:          /feed.xml
+    external:     false
 # ------------ CONFIGURABLE END ------------
 
 permalink:        /posts/:title
