--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # ----------- CONFIGURABLE START -----------
-title:            "blog"
+title:            ""
 description:      "random"
 url:              //rumia.club # Site url, without a slash at the end.
 signoff:          "rumia" # Your name
