--- a/_config.yml
+++ b/_config.yml
@@ -170,3 +170,5 @@ jekyll-archives:
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
+
+remote_theme: cotes2020/jekyll-theme-chirpy
