--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >-                        # used by seo meta and the atom feed
   
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://rumialunnar.github.io'
 
 author: Rumia                  # change to your full name
 
