add gem install

--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
           bundle config path ${{ env.GEMS_PATH }}
           bundle install --jobs 4 --retry 3
-
+          gem instal html-proofer
       - name: Check baseurl
         run: |
           baseurl="$(grep '^baseurl:' _config.yml | sed "s/.*: *//;s/['\"]//g;s/#.*//")"
